// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentityCredentials should expand last credential when there are less than 7 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Your Credentials
    </h1>
    <p
      class="subline"
    >
      View and manage your credentials
    </p>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            KILT Identity 1
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/"
        title="Add Identity"
      />
      <a
        aria-label="KILT Identity 2"
        class="right"
        href="/"
        title="KILT Identity 2"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <ul
      class="credentials"
    >
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Sporran email
            </h4>
            <p
              class="collapsedFirstProp"
            >
              sporran@sporran.org
            </p>
          </section>
        </button>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Alter Ego Email
            </h4>
            <p
              class="collapsedFirstProp"
            >
              badboy69@hotmail.com
            </p>
          </section>
        </button>
      </li>
      <li
        aria-expanded="true"
        class="credential"
      >
        <section
          class="expanded"
        >
          <section
            class="buttons"
          >
            <button
              aria-label="Collapse credential details"
              class="collapse"
              type="button"
            />
            <a
              aria-label="Back up credential"
              class="backup"
              download="Email Credential-Email.json"
              href="data:text/json;base64,eyJyZXF1ZXN0Ijp7ImNsYWltIjp7ImNUeXBlSGFzaCI6IjB4MzI5MWJiMTI2ZTMzYjQ4NjJkNDIxYmZhYTFkMmYyNzJlNmNkZmM0Zjk2NjU4OTg4ZmJjZmZlYTg5MTRiZDlhYyIsImNvbnRlbnRzIjp7IkVtYWlsIjoibW9ja0VtYWlsQG1vY2subW9jayJ9LCJvd25lciI6ImRpZDpraWx0OmxpZ2h0OjAwNHJya2lSVFpnc2d4akpERmtMc2l2cXFLVHFkVVR1eEtrM0ZYM21LRkFlTXhzUjUxIn0sImNsYWltSGFzaGVzIjpbIjB4MTQ0NTk3ZDI4NDVlMzI1ZGZmZDRlNTFhOTRlM2U5YzA0YjUyZGMxNTczZTY2YWZjNjkzODQ2ZDkxZjMxYTcxMyIsIjB4MzE3N2VhNDFmNzZkMDY2ZDE5MTIzYzJjYjBkZTEzYTM3ZDYzOTA2ZDJjNTE5ZTM2ZmJmZDc3NzNmYWMxYjcxOCIsIjB4OWQyZGNhZjUyMzhkNmJjNGJjZjAzMjhhZWRiMTY4OTQzNmUwNzdlYmY2MTk4YjZjNGU5NjE2NjQ4MDdlYWVkZiIsIjB4Y2VlMTkzZmZkZmE2MzQ4NzkwN2RmZTA4NDhhZTE1MGQ0YTcxOTZjYzFlM2Q1YmQyYzg5YmVjYjU0MDJlZmMwNyJdLCJjbGFpbU5vbmNlTWFwIjp7IjB4NTc0NThhNjk3MmU3ODIyM2NkNGY3ZjRjNTkyMzZlYTc2ZjM4N2FlNTcxYWI3ZTc5NDYwZjU2ZjJhYTk3NjIzZiI6ImQwYzlkNjQ3LTQyZWYtNGQ0NC1iNjAzLTNiNzc2MjYwYTZkZCIsIjB4Y2VmZTJiODhkMTA4MzQ4NjlkYWQzZThkNzMwNmY1YWE5OWExZjA3ODIxNGFkZWFlNzljYmVlZDMwM2U2MzhhZiI6IjZiNjIzMDhjLTg1NTctNGI2MS1hYzAyLThmOTA1NTU1ZDY3YiIsIjB4OGJlMzJkN2U5Y2M1MDE1YmY3MWI1YzQ1NTUwYTg3OTBjNDNiOWEyNmRiZmE5YTg1MjM4NzEyMTE3NDVkMzNhMyI6IjI0NzM5NGMwLWQ0NmItNDgyYS1iMGM1LTQ5M2FlYjUwNmQ2MSIsIjB4MTM2MWE3YmE3NTEyNTZlOWFjNmIzZTNlMjQ5MTJlNTBlNjhiZWY2NzhjNTEzMmMxMWM5NTY3ODIyMGUzYmY1ZSI6IjA3Yjk1ZjE3LTNmMjMtNGE5ZS04ZjQzLTMzODgxMjczNjgyYyJ9LCJsZWdpdGltYXRpb25zIjpbXSwiZGVsZWdhdGlvbklkIjpudWxsLCJyb290SGFzaCI6IjB4YmU3ZmNjN2FhMDE4NmIwNWZkMTE2YzEwMGUyZDY3M2ZiOTUxMTYzNjkzNzg4NjQwY2U2MDMyYWQyZjcwMGRhZSJ9LCJuYW1lIjoiRW1haWwgQ3JlZGVudGlhbCIsImNUeXBlVGl0bGUiOiJFbWFpbCIsImF0dGVzdGVyIjoiVHJ1c3RlZCBFbnRpdHkgYXR0ZXN0ZXIiLCJzdGF0dXMiOiJhdHRlc3RlZCJ9"
            />
          </section>
          <dl
            class="details"
          >
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Credential name
              </dt>
              <dd
                class="nameValue"
              >
                Email Credential
                <button
                  aria-label="Edit credential name"
                  class="editName"
                />
              </dd>
            </div>
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Status
              </dt>
              <dd
                class="detailValue"
              >
                Attested
              </dd>
            </div>
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Email
              </dt>
              <dd
                class="detailValue"
              >
                mockEmail@mock.mock
              </dd>
            </div>
          </dl>
          <h4
            class="technical"
          >
            Technical details
          </h4>
          <dl
            class="details"
          >
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                CType
              </dt>
              <dd
                class="detailValue"
              >
                Email
              </dd>
            </div>
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Attester
              </dt>
              <dd
                class="detailValue"
              >
                Trusted Entity attester
              </dd>
            </div>
            <div
              class="hash"
            >
              <dt
                class="detailName"
              >
                Credential hash
              </dt>
              <dd
                class="detailValue"
              >
                0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
              </dd>
            </div>
          </dl>
        </section>
      </li>
    </ul>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;

exports[`IdentityCredentials should not render credentials for new identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/add"
          title="Add Identity"
        />
      </section>
      <a
        aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
        class="left"
        href="/"
        title="KILT Identity 3 which has a very long name and might not even fit on the screen"
      />
      <a
        aria-label="KILT Identity 1"
        class="right"
        href="/"
        title="KILT Identity 1"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <a
      class="add"
      href="/identity/add"
    >
      Add Identity
    </a>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;

exports[`IdentityCredentials should render 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Your Credentials
    </h1>
    <p
      class="subline"
    >
      View and manage your credentials
    </p>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            KILT Identity 1
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/"
        title="Add Identity"
      />
      <a
        aria-label="KILT Identity 2"
        class="right"
        href="/"
        title="KILT Identity 2"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <ul
      class="credentials"
    >
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Lots of props
            </h4>
            <p
              class="collapsedFirstProp"
            >
              Proppy
            </p>
          </section>
        </button>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              All your stakes are belong to us
            </h4>
            <p
              class="collapsedFirstProp"
            >
              This is a really long name for the first property of claim contents to check how the overflow looks
            </p>
          </section>
        </button>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Dotsama Credential
            </h4>
            <p
              class="collapsedFirstProp"
            >
              God collator
            </p>
          </section>
        </button>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Believe me
            </h4>
            <p
              class="collapsedFirstProp"
            >
              realDonaldTrump
            </p>
          </section>
        </button>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Tweet Twit Twat
            </h4>
            <p
              class="collapsedFirstProp"
            >
              tweety_bird
            </p>
          </section>
        </button>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Mein Credential
            </h4>
            <p
              class="collapsedFirstProp"
            >
              maxmustermann@gmx.de
            </p>
          </section>
        </button>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              A really long name for my credential which probably will not fit on the screen
            </h4>
            <p
              class="collapsedFirstProp"
            >
              loremipsum@gmail.com
            </p>
          </section>
        </button>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Sporran email
            </h4>
            <p
              class="collapsedFirstProp"
            >
              sporran@sporran.org
            </p>
          </section>
        </button>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Alter Ego Email
            </h4>
            <p
              class="collapsedFirstProp"
            >
              badboy69@hotmail.com
            </p>
          </section>
        </button>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Email Credential
            </h4>
            <p
              class="collapsedFirstProp"
            >
              mockEmail@mock.mock
            </p>
          </section>
        </button>
      </li>
    </ul>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;

exports[`IdentityCredentials should render when no credentials 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Your Credentials
    </h1>
    <p
      class="subline"
    >
      View and manage your credentials
    </p>
    <div
      class="container"
    >
      <section>
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            KILT Identity 1
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/"
        title="Add Identity"
      />
      <a
        aria-label="KILT Identity 2"
        class="right"
        href="/"
        title="KILT Identity 2"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 1"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 1"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 2"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 2"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/"
            title="KILT Identity 3 which has a very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <section
      class="credentials"
    >
      <p
        class="info"
      >
        No credentials available
      </p>
      <a
        class="explainerLink"
        href="https://socialkyc.io/"
        rel="noreferrer"
        target="_blank"
      >
        Get Credentials
      </a>
    </section>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;
